[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GameTheme.tres" type="Theme" id=3]
[ext_resource path="res://tex/spindle.png" type="Texture" id=4]
[ext_resource path="res://hex_panel/HexContainer.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SpindleTex" type="TextureRect" parent="."]
margin_left = 140.158
margin_top = 92.1039
margin_right = 1012.16
margin_bottom = 249.104
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -66.0
margin_top = -250.0
margin_right = 66.0
margin_bottom = -161.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 132.0
margin_bottom = 31.0
text = "Start Game"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 132.0
margin_bottom = 39.0

[node name="ImportButton" type="Button" parent="VBoxContainer"]
margin_top = 43.0
margin_right = 132.0
margin_bottom = 74.0
text = "Import JSON"

[node name="EButton" type="Button" parent="VBoxContainer"]
margin_top = 78.0
margin_right = 132.0
margin_bottom = 109.0
text = "Entry Studio"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 113.0
margin_right = 132.0
margin_bottom = 144.0
text = "Settings"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 132.0
margin_bottom = 152.0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 156.0
margin_right = 132.0
margin_bottom = 187.0
text = "Quit Game"

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.5
margin_top = -211.5
margin_right = 284.5
margin_bottom = 211.5
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.json" )
current_dir = "/"
current_path = "/"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.5
margin_top = -62.0
margin_right = 158.5
margin_bottom = 62.0
dialog_text = "No Entry files found.
Click \"Entry Studio\" to create entry files, or import from files you have."
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitConfirm" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.0
margin_top = -38.0
margin_right = 102.0
margin_bottom = 38.0
window_title = "Quit?"
dialog_text = "Exit game?"

[node name="HexContainer" parent="." instance=ExtResource( 5 )]
margin_left = 343.0
margin_top = 109.6
margin_right = -937.0
margin_bottom = -610.4
grow_horizontal = 1
grow_vertical = 1

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ImportButton" to="." method="_on_ImportButton_pressed"]
[connection signal="pressed" from="VBoxContainer/EButton" to="." method="_on_EButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="confirmed" from="QuitConfirm" to="." method="_on_QuitConfirm_confirmed"]
